# laser_painter

./: CMakeLists.txt  LICENSE.txt  README.md
src/: CMakeLists.txt  camera_frame_grabber.cpp  camera_frame_grabber.h  camera_settings.cpp  camera_settings.h  image_modifier.cpp  image_modifier.h  image_widget.cpp  image_widget.h  laser_detector.cpp  laser_detector.h  laser_detector_calibration_dialog.cpp  laser_detector_calibration_dialog.h  laser_detector_settings.cpp  laser_detector_settings.h  main.cpp  main_window.cpp  main_window.h  point_modifier.cpp  point_modifier.h  roi_image_widget.cpp  roi_image_widget.h  track_widget.cpp  track_widget.h  tracker_settings.cpp  tracker_settings.h  video_frame_grabber.cpp  video_frame_grabber.h
